Fix selection text color for better contrast

--- a/src/assets/styles/globals/_base.scss
+++ b/src/assets/styles/globals/_base.scss
@@ -21,7 +21,7 @@ body{
 
 ::selection{
 	background-color: var(--color-accent);
-	color: var(--color-bg);
+	color: var(--color-foreground);
 }
 
 main{
